cmake_minimum_required( VERSION 2.8 )

# Create Project
project( CLIENT_VIEWER )
add_executable( client_viewer client_viewer.cpp client.cpp)

# Find Packages
find_package( PCL 1.7 REQUIRED )

if( PCL_FOUND )
  # [C/C++]>[General]>[Additional Include Directories]
  include_directories( ${PCL_INCLUDE_DIRS} )

  # [C/C++]>[Preprocessor]>[Preprocessor Definitions]
  add_definitions( ${PCL_DEFINITIONS} )
  
  # For Use Not PreCompiled Features 
  #add_definitions( -DPCL_NO_PRECOMPILE )

  # [Linker]>[General]>[Additional Library Directories]
  link_directories( ${PCL_LIBRARY_DIRS} )

  # [Linker]>[Input]>[Additional Dependencies]
  target_link_libraries( client_viewer ${PCL_LIBRARIES} )
endif()
